    some internals; last concurrency instruction wins.
  * man/ipsvd-instruct.5: document check host instructions; update
    concurrency instruction.
  * ipsvd-cdb.c: consider filenames starting with a single dot; skip
    filenames starting with two dots; minor.
  * man/ipsvd-cdb.8: adapt.
  * Makefile: minor.
  * doc/upgrade.html: new.
  * doc/index.html adapt.

ipsvd 0.6.1
Tue, 14 Oct 2003 11:17:29 +0000
  * ipsvd_scan.c: include sys/types.h (fixes build failure on freebsd,
    thx Sergei Kolobov).
  * trysocketlib.c: new; check for libraries needed for socket() on some
    systems (solaris, thx Uffe Jakobsen).
  * Makefile: adapt.

ipsvd 0.6.0
Mon, 29 Sep 2003 10:59:15 +0000
  * man/ipsvd-instruct.5: minor.
  * ipsvd_scan.h, ipsvd_scan.c: new; ipsvd_scan_port(): get port number
    from name or number (thx Matthias Andree for sample code).
  * tcpsvd.c, udpsvd.c: support name from /etc/services as command line
    option port.
  * man/tcpsvd.8, man/udpsvd.8, Makefile: adapt.
  * man/ipsvd.7: -u option is now mandatory.
  * udpsvd.c, man/udpsvd.8: stdout is redirected to stderr.
  * doc/index.html: minor.

ipsvd 0.5.0
Wed, 06 Aug 2003 15:39:11 +0200
  * doc/examples.html: typo (dead link, thx clemens fischer).
  * man/ipsvd.7, man/tcpsvd.8, man/udpsvd.8: typos; wording.
  * uidgid.c, uidgid.h: new; get uid/gid by name.
  * ipsvd-cdb.c, ipsvd_check.h, ipsvd_check.c, ipsvd_hostname.c, tcpsvd.c,
    udpsvd.c: code cleanup.

ipsvd 0.4.1
Mon, 12 May 2003 10:18:05 +0200
  * ipsvd_fmt.c: minor cleanup.
  * tcpsvd.c: include sys/types.h (really; thx clemens fischer); minor
    cleanup.
  * doc/examples.html: add qmail-smtpd example; minor adaptations.
  * man/ipsvd-instruct.5, man/ipsvd.7: don't remove files without write
    permission set on timeout.
  * tcpsvd.c, udpsvd.c: support -uuser[:group].
  * man/tcpsvd.8, man/udpsvd.8: adapt.

ipsvd 0.4.0
Mon, 05 May 2003 13:15:45 +0200
  * ipsvd_check.c, ipsvd_check.h, tcpsvd.c: optionally send alert message